--- a/package.json
+++ b/package.json
@@ -1,14 +1,12 @@
 {
   "name": "tree",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "description": "Outliner with extras",
   "main": "main.js",
   "scripts": {
-    "build": "cp src/main.css dist && cp src/index.html dist && ./node_modules/.bin/webpack src/main.js dist/main.js",
+    "build": "cp src/*.css dist && cp src/*.html dist && ./node_modules/.bin/webpack src/main.js dist/main.js",
     "serve": "http-server -p 9090 dist/",
-    "watch:js": "onchange src/*.js -- npm run build -s",
-    "watch:html": "onchange src/*.html -- npm run build -s",
-    "build:watch": "parallelshell 'npm run watch:js -s' 'npm run watch:html -s'",
+    "watch": "onchange src/* -- npm run build -s",
     "livereload": "live-reload --port 9091 dist/"
   },
   "author": "Boris Terzic <boris@terzic.be>",
