Fixing the standard js validation by also installing 2 necessary eslint modules, setting the correct visual studio code settings and updating the documentation

--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "author": "Boris Terzic <boris@terzic.be>",
   "license": "MIT",
   "devDependencies": {
+    "eslint": "^4.3.0",
+    "eslint-plugin-import": "^2.7.0",
     "http-server": "^0.9.0",
     "live-reload": "^1.1.0",
     "onchange": "^3.2.1",
