--- a/package.json
+++ b/package.json
@@ -2,9 +2,13 @@
   "name": "dendriform",
   "version": "1.0.0",
   "description": "A web based outliner with offline capabilities",
+  "repository" : {
+    "type" : "git"
+  , "url" : "https://github.com/aggregat4/dendriform"
+  },
   "main": "main.js",
   "scripts": {
-    "build": "cp src/*.css dist && cp src/*.html dist && ./node_modules/.bin/webpack src/main.js dist/main.js",
+    "build": "cp src/*.css dist && cp src/*.html dist && ./node_modules/.bin/webpack",
     "serve": "http-server -p 9090 dist/",
     "watch": "onchange src/* -- npm run build -s",
     "livereload": "live-reload --port 9091 dist/"
@@ -19,6 +23,8 @@
     "onchange": "^3.2.1",
     "parallelshell": "^3.0.2",
     "standard": "^10.0.3",
+    "ts-loader": "^3.1.1",
+    "typescript": "^2.6.1",
     "webpack": "^3.8.1"
   },
   "dependencies": {
