--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,12 @@
 {
   "compilerOptions": {
-    "sourceMap": true
+    "target": "ES6",
+    "sourceMap": true,
+    "baseUrl": ".",
+    "paths": {
+      // TS could not resolve these modules, this is from the https://www.typescriptlang.org/docs/handbook/module-resolution.html page under Path mapping
+      "maquette": ["node_modules/maquette/dist/index"],
+      "pouchdb-browser": ["node_modules/pouchdb-browser/lib/index"]
+    }
   }
 }
