--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,3 @@
 {
-  "javascript.validate.enable" : false,
-  "standard.enable": true,
-  "eslint.enable": false
+  "javascript.validate.enable" : false
 }
