--- a/package.json
+++ b/package.json
@@ -16,14 +16,12 @@
   "author": "Boris Terzic <boris@terzic.be>",
   "license": "Apache-2.0",
   "devDependencies": {
-    "eslint": "^4.10.0",
-    "eslint-plugin-import": "^2.8.0",
     "http-server": "^0.10.0",
     "live-reload": "^1.1.0",
     "onchange": "^3.2.1",
     "parallelshell": "^3.0.2",
-    "standard": "^10.0.3",
     "ts-loader": "^3.1.1",
+    "tslint": "^5.8.0",
     "typescript": "^2.6.1",
     "webpack": "^3.8.1"
   },
