--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "maquette": "^3.0.1",
-    "pouchdb-browser": "^6.3.4"
+    "pouchdb-browser": "^6.3.4",
+    "redom": "^3.11.1"
   }
 }
