--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
       // TS could not resolve these modules, this is from the https://www.typescriptlang.org/docs/handbook/module-resolution.html page under Path mapping
       "maquette": ["node_modules/maquette/dist/index"],
       "pouchdb-browser": ["node_modules/pouchdb-browser/lib/index"],
-      "redom": ["node_modules/redom/dist/redom"]
+      "redom": ["node_modules/redom/dist/redom"],
+      "p-queue": ["node_modules/p-queue/index"]
     }
   }
 }
