--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "ts-loader": "^3.5.0",
     "tslint": "^5.9.1",
     "typescript": "^2.8.1",
-    "webpack": "^3.11.0"
+    "webpack": "^3.11.0",
+    "webpack-bundle-analyzer": "^2.12.0"
   },
   "dependencies": {
     "p-queue": "^2.3.1",
