--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "build": "cp src/css/*.css dist && cp src/example/*.css dist && cp src/example/*.html dist && ./node_modules/.bin/webpack",
     "serve": "http-server -p 9090 dist/",
     "watch": "onchange src/* -- npm run build -s",
-    "livereload": "live-reload --port 9091 dist/"
+    "livereload": "live-reload --port 9091 dist/",
+    "sloc": "node_modules/.bin/sloc src"
   },
   "author": "Boris Terzic <boris@terzic.be>",
   "license": "Apache-2.0",
@@ -20,6 +21,7 @@
     "live-reload": "^1.1.0",
     "onchange": "^3.3.0",
     "parallelshell": "^3.0.2",
+    "sloc": "^0.2.0",
     "ts-loader": "^3.5.0",
     "tslint": "^5.9.1",
     "typescript": "^2.8.1",
