--- a/package.json
+++ b/package.json
@@ -12,16 +12,21 @@
     "serve": "http-server -p 9090 dist/",
     "watch": "onchange src/* -- npm run build -s",
     "livereload": "live-reload --port 9091 dist/",
-    "sloc": "node_modules/.bin/sloc src"
+    "sloc": "node_modules/.bin/sloc src",
+    "test": "jest",
+    "test-watch": "npx jest --watch"
   },
   "author": "Boris Terzic <boris@terzic.be>",
   "license": "Apache-2.0",
   "devDependencies": {
+    "@types/jest": "^22.2.3",
     "http-server": "^0.10.0",
+    "jest": "^23.0.1",
     "live-reload": "^1.1.0",
     "onchange": "^3.3.0",
     "parallelshell": "^3.0.2",
     "sloc": "^0.2.0",
+    "ts-jest": "^22.4.6",
     "ts-loader": "^3.5.0",
     "tslint": "^5.9.1",
     "typescript": "^2.8.1",
