Continuing to implement the event logs, next step is persisting and loading the actual event log

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   "dependencies": {
     "p-queue": "^2.3.1",
     "pouchdb-browser": "^6.4.3",
-    "redom": "^3.11.1"
+    "redom": "^3.11.1",
+    "dexie": "^2.0.4"
   }
 }
