--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,8 @@
       "maquette": ["node_modules/maquette/dist/index"],
       "pouchdb-browser": ["node_modules/pouchdb-browser/lib/index"],
       "redom": ["node_modules/redom/dist/redom"],
-      "p-queue": ["node_modules/p-queue/index"]
+      "p-queue": ["node_modules/p-queue/index"],
+      "dexie": ["node_modules/dexie/dist/dexie"]
     }
   }
 }
