--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "build": "cp src/css/*.css dist && cp src/example/*.css dist && cp src/example/*.html dist && ./node_modules/.bin/webpack",
     "serve": "http-server -p 9090 dist/",
-    "watch": "onchange src/* -- npm run build -s",
+    "watch": "onchange './src/' './' -i -- npm run build -s",
     "livereload": "live-reload --port 9091 dist/",
     "sloc": "node_modules/.bin/sloc src",
     "test": "jest",
@@ -19,24 +19,24 @@
   "author": "Boris Terzic <boris@terzic.be>",
   "license": "Apache-2.0",
   "devDependencies": {
-    "@types/jest": "^22.2.3",
+    "@types/jest": "^23.3.1",
     "http-server": "^0.10.0",
-    "jest": "^23.0.1",
+    "jest": "^23.5.0",
     "live-reload": "^1.1.0",
-    "onchange": "^3.3.0",
+    "onchange": "^4.1.0",
     "parallelshell": "^3.0.2",
     "sloc": "^0.2.0",
     "ts-jest": "^22.4.6",
     "ts-loader": "^3.5.0",
-    "tslint": "^5.9.1",
-    "typescript": "^2.8.1",
-    "webpack": "^3.11.0",
+    "tslint": "^5.11.0",
+    "typescript": "^2.9.2",
+    "webpack": "^3.12.0",
     "webpack-bundle-analyzer": "^2.13.1"
   },
   "dependencies": {
-    "p-queue": "^2.3.1",
+    "dexie": "^2.0.4",
+    "p-queue": "^2.4.2",
     "pouchdb-browser": "^6.4.3",
-    "redom": "^3.11.1",
-    "dexie": "^2.0.4"
+    "redom": "^3.12.7"
   }
 }
