--- a/package.json
+++ b/package.json
@@ -19,24 +19,25 @@
   "author": "Boris Terzic <boris@terzic.be>",
   "license": "Apache-2.0",
   "devDependencies": {
-    "@types/jest": "^23.3.1",
-    "http-server": "^0.10.0",
-    "jest": "^23.5.0",
+    "@types/jest": "^23.3.2",
+    "http-server": "^0.11.0",
+    "jest": "^23.6.0",
     "live-reload": "^1.1.0",
     "onchange": "^4.1.0",
     "parallelshell": "^3.0.2",
     "sloc": "^0.2.0",
-    "ts-jest": "^22.4.6",
-    "ts-loader": "^3.5.0",
+    "ts-jest": "^23.1.0",
+    "ts-loader": "^5.1.0",
     "tslint": "^5.11.0",
-    "typescript": "^2.9.2",
-    "webpack": "^3.12.0",
-    "webpack-bundle-analyzer": "^2.13.1"
+    "typescript": "^3.0.0",
+    "webpack": "^4.18.0",
+    "webpack-bundle-analyzer": "^3.0.0",
+    "webpack-cli": "^3.1.0"
   },
   "dependencies": {
     "dexie": "^2.0.4",
-    "p-queue": "^2.4.2",
+    "p-queue": "^3.0.0",
     "pouchdb-browser": "^6.4.3",
-    "redom": "^3.12.7"
+    "redom": "^3.13.1"
   }
 }
