--- a/package.json
+++ b/package.json
@@ -19,24 +19,29 @@
   "author": "Boris Terzic <boris@terzic.be>",
   "license": "Apache-2.0",
   "devDependencies": {
+    "@babel/core": "^7.1.2",
+    "@babel/preset-env": "^7.1.0",
     "@types/jest": "^23.3.2",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-jest": "^23.6.0",
+    "babel-loader": "^8.0.4",
     "http-server": "^0.11.0",
     "jest": "^23.6.0",
     "live-reload": "^1.1.0",
     "onchange": "^4.1.0",
     "parallelshell": "^3.0.2",
     "sloc": "^0.2.0",
-    "ts-jest": "^23.1.0",
-    "ts-loader": "^5.1.0",
+    "ts-jest": "^23.10.3",
+    "ts-loader": "^5.2.1",
     "tslint": "^5.11.0",
-    "typescript": "^3.0.0",
-    "webpack": "^4.18.0",
-    "webpack-bundle-analyzer": "^3.0.0",
-    "webpack-cli": "^3.1.0"
+    "typescript": "^3.1.1",
+    "webpack": "^4.20.2",
+    "webpack-bundle-analyzer": "^3.0.2",
+    "webpack-cli": "^3.1.2"
   },
   "dependencies": {
     "dexie": "^2.0.4",
     "p-queue": "^3.0.0",
-    "redom": "^3.13.1"
+    "redom": "^3.14.1"
   }
 }
