Maybe the logoot sequence order is now correct: had a logic error where with inserting something before another node I was subtracting one from its position in the list, but inserting before basically means inserting that that item's position and moving everything else up.

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "livereload": "live-reload --port 9091 dist/",
     "sloc": "node_modules/.bin/sloc src",
     "test": "jest",
+    "testcoverage": "jest --coverage",
     "test-watch": "npx jest --watch"
   },
   "author": "Boris Terzic <boris@terzic.be>",
