Upgrading dependencies, fixing some build config

--- a/package.json
+++ b/package.json
@@ -14,37 +14,39 @@
     "watch": "onchange './src/**/*.*' './*.*' -i -- npm run build-and-test -s",
     "livereload": "live-reload --port 9091 dist/",
     "sloc": "node_modules/.bin/sloc src",
-    "test": "jest",
-    "testcoverage": "jest --coverage",
+    "test": "npx jest",
+    "testcoverage": "npx jest --coverage",
     "test-watch": "npx jest --watch"
   },
   "author": "Boris Terzic <boris@terzic.be>",
   "license": "Apache-2.0",
   "devDependencies": {
-    "@babel/core": "^7.3.4",
-    "@babel/preset-env": "^7.3.4",
-    "@types/jest": "^24.0.9",
-    "babel-loader": "^8.0.5",
-    "babel-jest": "^24.1.0",
-    "jest": "^24.1.0",
+    "@babel/core": "^7.4.4",
+    "@babel/preset-env": "^7.4.4",
+    "@types/file-saver": "^2.0.0",
+    "@types/jest": "^24.0.13",
+    "babel-jest": "^24.8.0",
+    "babel-loader": "^8.0.6",
     "http-server": "^0.11.0",
+    "jest": "^24.8.0",
     "live-reload": "^1.1.0",
     "lodash": ">=4.17.5",
     "onchange": "^5.2.0",
     "parallelshell": "^3.0.2",
     "sloc": "^0.2.1",
     "syntax-error": ">=1.1.1",
-    "ts-jest": "^24.0.0",
-    "ts-loader": "^5.3.3",
-    "tslint": "^5.13.0",
-    "typescript": "^3.3.3",
-    "webpack": "^4.29.5",
-    "webpack-bundle-analyzer": "^3.0.4",
-    "webpack-cli": "^3.2.3"
+    "ts-jest": "^24.0.2",
+    "ts-loader": "^5.4.5",
+    "tslint": "^5.16.0",
+    "typescript": "^3.4.5",
+    "webpack": "^4.31.0",
+    "webpack-bundle-analyzer": "^3.3.2",
+    "webpack-cli": "^3.3.2"
   },
   "dependencies": {
     "dexie": "^2.0.4",
-    "p-queue": "^3.1.0",
-    "redom": "^3.18.0"
+    "file-saver": "^2.0.2",
+    "hyperscript": "^2.0.2",
+    "redom": "^3.20.0"
   }
 }
