Added properties created and updated to RepositoryNode and all the necessary mappers and event representations

--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "dexie": "^2.0.4",
     "file-saver": "^2.0.2",
     "hyperscript": "^2.0.2",
+    "moment": "^2.24.0",
     "redom": "^3.20.0"
   }
 }
