--- a/package.json
+++ b/package.json
@@ -23,8 +23,11 @@
   "devDependencies": {
     "@babel/core": "^7.4.4",
     "@babel/preset-env": "^7.4.4",
+    "@types/dexie": "^1.3.1",
     "@types/file-saver": "^2.0.0",
+    "@types/hyperscript": "0.0.3",
     "@types/jest": "^24.0.13",
+    "@types/luxon": "^1.13.0",
     "babel-jest": "^24.8.0",
     "babel-loader": "^8.0.6",
     "http-server": "^0.11.0",
@@ -36,7 +39,7 @@
     "sloc": "^0.2.1",
     "syntax-error": ">=1.1.1",
     "ts-jest": "^24.0.2",
-    "ts-loader": "^5.4.5",
+    "ts-loader": "^6.0.0",
     "tslint": "^5.16.0",
     "typescript": "^3.4.5",
     "webpack": "^4.31.0",
@@ -47,7 +50,7 @@
     "dexie": "^2.0.4",
     "file-saver": "^2.0.2",
     "hyperscript": "^2.0.2",
-    "moment": "^2.24.0",
+    "luxon": "^1.13.2",
     "redom": "^3.20.0"
   }
 }
