--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "sloc": "node_modules/.bin/sloc src",
     "test": "npx jest",
     "testcoverage": "npx jest --coverage",
-    "test-watch": "npx jest --watch"
+    "test-watch": "npx jest --watch",
+    "unused": "./node_modules/.bin/ts-unused-exports tsconfig.json"
   },
   "author": "Boris Terzic <boris@terzic.be>",
   "license": "Apache-2.0",
@@ -40,6 +41,7 @@
     "syntax-error": ">=1.1.1",
     "ts-jest": "^24.0.2",
     "ts-loader": "^6.0.0",
+    "ts-unused-exports": "^2.0.11",
     "tslint": "^5.16.0",
     "typescript": "^3.4.5",
     "webpack": "^4.31.0",
