--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "main": "main.js",
   "scripts": {
     "build": "cp src/css/*.css dist && cp src/example/*.css dist && cp src/example/*.html dist && ./node_modules/.bin/webpack",
+    "rbuild": "cp src/css/*.css rdist && cp src/example/*.css rdist && cp src/example/*.html rdist && rollup -c rollup.config.js",
     "build-and-test": "npm run build && npm run test",
     "serve": "http-server -p 9090 dist/",
     "watch": "onchange './src/**/*.*' './*.*' -i -- npm run build-and-test -s",
@@ -37,11 +38,17 @@
     "lodash": ">=4.17.15",
     "onchange": "^6.0.0",
     "parallelshell": "^3.0.2",
+    "rollup-plugin-commonjs": "^10.0.1",
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-typescript": "^1.0.1",
+    "rollup-plugin-off-main-thread": "^1.1.0",
+    "rollup-plugin-terser": "^5.1.1",
     "sloc": "^0.2.1",
     "syntax-error": ">=1.1.1",
     "ts-jest": "^24.0.2",
     "ts-loader": "^6.0.4",
     "ts-unused-exports": "^2.0.11",
+    "tslib": "^1.10.0",
     "tslint": "^5.18.0",
     "typescript": "^3.5.3",
     "webpack": "^4.36.1",
