--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <groupId>net.aggregat4.dendriform</groupId>
     <artifactId>dendriform-client</artifactId>
     <version>1.0.0-SNAPSHOT</version>
-    <packaging>jar</packaging>
+    <packaging>pom</packaging>
 
     <url>https://github.com/aggregat4/dendriform</url>
 
@@ -69,7 +69,7 @@
                         <configuration>
                             <appendAssemblyId>false</appendAssemblyId>
                             <descriptors>
-                                <descriptor>assembly.xml</descriptor>
+                                <descriptor>client-assembly.xml</descriptor>
                             </descriptors>
                         </configuration>
                     </execution>
