--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
   "main": "main.js",
   "scripts": {
     "clean": "rm -rf node_modules dist && mkdir dist",
-    "wbuild": "cp src/css/*.css dist && cp src/example/*.css dist && cp src/example/*.html dist && ./node_modules/.bin/webpack",
-    "build":  "cp src/css/*.css dist && cp src/example/*.css dist && cp src/example/*.html dist && rollup -c rollup.config.js",
+    "build": "cp src/css/*.css dist && cp src/example/*.css dist && cp src/example/*.html dist && rollup -c rollup.config.js",
     "build-and-test": "npm run build && npm run test",
     "serve": "http-server -p 9090 dist/",
     "watch": "onchange './src/**/*.*' './*.*' -i -- npm run build-and-test -s",
@@ -24,14 +23,10 @@
   "author": "Boris Terzic <boris@terzic.be>",
   "license": "Apache-2.0",
   "devDependencies": {
-    "@babel/core": "^7.7.2",
-    "@babel/preset-env": "^7.7.1",
     "@types/dexie": "^1.3.1",
     "@types/file-saver": "^2.0.1",
     "@types/hyperscript": "0.0.3",
     "@types/jest": "^24.0.23",
-    "babel-jest": "^24.8.0",
-    "babel-loader": "^8.0.6",
     "http-server": "^0.11.0",
     "jest": "^24.9.0",
     "live-reload": "^1.1.0",
@@ -41,7 +36,6 @@
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-off-main-thread": "^1.1.0",
-    "rollup-plugin-terser": "^5.1.2",
     "rollup-plugin-typescript": "^1.0.1",
     "rollup-plugin-visualizer": "^3.2.1",
     "sloc": "^0.2.1",
@@ -51,10 +45,7 @@
     "ts-unused-exports": "^4.0.0",
     "tslib": "^1.10.0",
     "tslint": "^5.20.1",
-    "typescript": "^3.7.2",
-    "webpack": "^4.41.2",
-    "webpack-bundle-analyzer": "^3.6.0",
-    "webpack-cli": "^3.3.10"
+    "typescript": "^3.7.2"
   },
   "dependencies": {
     "dexie": "^2.0.4",
