--- a/package.json
+++ b/package.json
@@ -15,14 +15,12 @@
     "clean": "rm -rf node_modules dist && mkdir dist",
     "build": "cp src/css/*.css dist && cp src/example/*.css dist && cp src/example/*.html dist && npx rollup -c rollup.config.js",
     "build-and-test": "npm run build && npm run test",
-    "serve": "http-server -p 9090 dist/",
-    "watchold": "onchange './src/**/*.*' './*.*' -i -- npm run build-and-test -s",
-    "watch": "onchange './src/**/*.*' './*.*' -i -- npm run build-and-test -s",
-    "sloc": "node_modules/.bin/sloc src",
+    "watch": "npx onchange './src/**/*.*' './*.*' -i -- npm run build-and-test -s",
+    "sloc": "npx sloc src",
     "test": "npx jest",
     "testcoverage": "npx jest --coverage",
     "test-watch": "npx jest --watch",
-    "unused": "./node_modules/.bin/ts-unused-exports tsconfig.json"
+    "unused-exports": "npx ts-unused-exports tsconfig.json"
   },
   "author": "Boris Terzic <boris@terzic.be>",
   "license": "Apache-2.0",
@@ -32,12 +30,11 @@
     "@types/file-saver": "^2.0.1",
     "@types/hyperscript": "0.0.3",
     "@types/jest": "^24.0.25",
-    "http-server": "^0.12.0",
     "jest": "^24.9.0",
     "lodash": ">=4.17.15",
     "onchange": "^6.1.0",
     "parallelshell": "^3.0.2",
-    "rollup": "^1.28.0",
+    "rollup": "^1.29.0",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-off-main-thread": "^1.1.0",
