--- a/package.json
+++ b/package.json
@@ -25,11 +25,14 @@
   "author": "Boris Terzic <boris@terzic.be>",
   "license": "Apache-2.0",
   "devDependencies": {
+    "@babel/core": "^7.7.7",
     "@babel/plugin-transform-modules-commonjs": "^7.7.5",
+    "@babel/preset-env": "^7.7.7",
     "@types/dexie": "^1.3.1",
     "@types/file-saver": "^2.0.1",
     "@types/hyperscript": "0.0.3",
     "@types/jest": "^24.0.25",
+    "babel-jest": "^24.9.0",
     "jest": "^24.9.0",
     "lodash": ">=4.17.15",
     "onchange": "^6.1.0",
