--- a/package.json
+++ b/package.json
@@ -35,12 +35,11 @@
     "@types/file-saver": "^2.0.1",
     "@types/hyperscript": "0.0.3",
     "@types/jest": "^24.0.25",
+    "@wessberg/rollup-plugin-ts": "^1.2.13",
     "babel-jest": "^24.9.0",
     "jest": "^24.9.0",
     "lodash": ">=4.17.15",
     "npm-watch": "^0.6.0",
-    "onchange": "^6.1.0",
-    "parallelshell": "^3.0.2",
     "rollup": "^1.29.0",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-node-resolve": "^5.2.0",
