--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "dendriform",
   "version": "1.0.0",
-  "description": "A web based offline outliner with sync",
+  "description": "A web based offline first outliner with sync",
   "repository": {
     "type": "git",
     "url": "https://github.com/aggregat4/dendriform"
@@ -15,11 +15,12 @@
     "build-and-test": "./src/**/*.*"
   },
   "scripts": {
-    "clean": "rm -rf node_modules dist && mkdir dist",
+    "clean": "rm -rf dist && mkdir dist",
     "build": "cp src/css/*.css dist && cp src/example/*.css dist && cp src/example/*.html dist && npx rollup -c rollup.config.js",
-    "build-and-test": "npm run build && npm run test",
-    "watch": "npm-watch",
     "test": "npx jest",
+    "build-test": "npm run build && npm run test",
+    "clean-build-test": "npm run clean && npm run build && npm run test",
+    "watch": "npm-watch",
     "testcoverage": "npx jest --coverage",
     "test-watch": "npx jest --watch",
     "sloc": "npx sloc src",
@@ -28,38 +29,36 @@
   "author": "Boris Terzic <boris@terzic.be>",
   "license": "Apache-2.0",
   "devDependencies": {
-    "@babel/core": "^7.7.7",
-    "@babel/plugin-transform-modules-commonjs": "^7.7.5",
-    "@babel/preset-env": "^7.7.7",
-    "@types/dexie": "^1.3.1",
-    "@types/file-saver": "^2.0.1",
+    "@babel/core": "7.8.3",
+    "@babel/plugin-transform-modules-commonjs": "7.8.3",
+    "@babel/preset-env": "7.8.3",
+    "@types/file-saver": "2.0.1",
     "@types/hyperscript": "0.0.3",
-    "@types/jest": "^24.0.25",
-    "@wessberg/rollup-plugin-ts": "^1.2.13",
-    "babel-jest": "^24.9.0",
-    "jest": "^24.9.0",
+    "@types/jest": "24.9.1",
+    "@wessberg/rollup-plugin-ts": "1.2.13",
+    "babel-jest": "25.1.0",
+    "jest": "25.1.0",
     "lodash": ">=4.17.15",
-    "npm-watch": "^0.6.0",
-    "rollup": "^1.29.0",
-    "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-off-main-thread": "^1.1.0",
-    "rollup-plugin-typescript": "^1.0.1",
-    "rollup-plugin-visualizer": "^3.3.1",
-    "sloc": "^0.2.1",
+    "npm-watch": "0.6.0",
+    "rollup": "1.29.1",
+    "rollup-plugin-commonjs": "10.1.0",
+    "rollup-plugin-node-resolve": "5.2.0",
+    "rollup-plugin-off-main-thread": "1.1.0",
+    "rollup-plugin-typescript": "1.0.1",
+    "rollup-plugin-visualizer": "3.3.1",
+    "sloc": "0.2.1",
     "syntax-error": ">=1.1.1",
-    "ts-jest": "^24.3.0",
-    "ts-loader": "^6.2.1",
-    "ts-unused-exports": "^5.3.0",
-    "tslib": "^1.10.0",
-    "tslint": "^5.20.1",
-    "typescript": "^3.7.4"
+    "ts-jest": "25.0.0",
+    "ts-loader": "6.2.1",
+    "ts-unused-exports": "5.5.0",
+    "tslib": "1.10.0",
+    "tslint": "6.0.0",
+    "typescript": "3.7.5"
   },
   "dependencies": {
-    "dexie": "^2.0.4",
-    "file-saver": "^2.0.2",
-    "hyperscript": "^2.0.2",
-    "idb": "^5.0.0",
-    "redom": "^3.24.3"
+    "file-saver": "2.0.2",
+    "hyperscript": "2.0.2",
+    "idb": "5.0.0",
+    "redom": "3.25.1"
   }
 }
