Refactored the tests to use my own 'library' inspired by baretests and this allows me to remove jest

--- a/package.json
+++ b/package.json
@@ -38,7 +38,11 @@
     "@types/jest": "24.9.1",
     "@wessberg/rollup-plugin-ts": "1.2.13",
     "babel-jest": "25.1.0",
+    "barecolor": "^1.0.1",
+    "ceylon": "^0.9.1",
     "jest": "25.1.0",
+    "jsdom": "^16.1.0",
+    "jsdom-global": "^3.0.2",
     "lodash": ">=4.17.15",
     "npm-watch": "0.6.0",
     "rollup": "1.29.1",
