Cleaning up test refactoring and updating dependencies

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "url": "https://github.com/aggregat4/dendriform"
   },
   "engines": {
-    "node": ">=12.0.0",
+    "node": ">=13.0.0",
     "npm": ">=6.13.0"
   },
   "main": "main.js",
@@ -17,54 +17,39 @@
   "scripts": {
     "clean": "rm -rf dist && mkdir dist",
     "build": "cp src/css/*.css dist && cp src/example/*.css dist && npx rollup -c rollup.config.js",
-    "test": "npx jest",
+    "test": "npx ts-node test/runtests.ts",
     "build-test": "npm run build && npm run test",
     "clean-build-test": "npm run clean && npm run build && npm run test",
     "watch": "npm-watch",
-    "testcoverage": "npx jest --coverage",
-    "test-watch": "npx jest --watch",
     "sloc": "npx sloc src",
     "unused-exports": "npx ts-unused-exports tsconfig.json",
-    "serve": "npx http-server dist"
+    "serve": "npx http-server dist",
+    "unused-dependencies": "npx depcheck"
   },
   "author": "Boris Terzic <boris@terzic.be>",
   "license": "Apache-2.0",
   "devDependencies": {
-    "@babel/core": "7.8.3",
-    "@babel/plugin-transform-modules-commonjs": "7.8.3",
-    "@babel/preset-env": "7.8.3",
     "@types/file-saver": "2.0.1",
     "@types/hyperscript": "0.0.3",
-    "@types/jest": "24.9.1",
-    "@wessberg/rollup-plugin-ts": "1.2.13",
-    "babel-jest": "25.1.0",
+    "@wessberg/rollup-plugin-ts": "1.2.16",
     "barecolor": "^1.0.1",
     "ceylon": "^0.9.1",
-    "jest": "25.1.0",
     "jsdom": "^16.1.0",
     "jsdom-global": "^3.0.2",
-    "lodash": ">=4.17.15",
     "npm-watch": "0.6.0",
-    "rollup": "1.29.1",
+    "rollup": "1.31.0",
     "rollup-plugin-commonjs": "10.1.0",
-    "rollup-plugin-html2": "0.6.0",
+    "rollup-plugin-html2": "0.7.0",
     "rollup-plugin-node-resolve": "5.2.0",
-    "rollup-plugin-off-main-thread": "1.1.0",
-    "rollup-plugin-typescript": "1.0.1",
     "rollup-plugin-visualizer": "3.3.1",
-    "sloc": "0.2.1",
-    "syntax-error": ">=1.1.1",
-    "ts-jest": "25.0.0",
-    "ts-loader": "6.2.1",
-    "ts-unused-exports": "5.5.0",
-    "tslib": "1.10.0",
+    "ts-unused-exports": "6.0.0",
     "tslint": "6.0.0",
     "typescript": "3.7.5"
   },
   "dependencies": {
     "file-saver": "2.0.2",
     "hyperscript": "2.0.2",
-    "idb": "5.0.0",
+    "idb": "5.0.1",
     "lit-html": "1.1.2",
     "redom": "3.25.1"
   }
