--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "eslint-plugin-prefer-arrow": "^1.2.1",
     "jsdom": "16.2.2",
     "jsdom-global": "3.0.2",
+    "prettier": "2.0.5",
     "rollup": "2.18.0",
     "rollup-plugin-commonjs": "10.1.0",
     "rollup-plugin-copy": "^3.3.0",
