--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "eslint-plugin-import": "^2.21.2",
     "eslint-plugin-jsdoc": "^28.5.1",
     "eslint-plugin-prefer-arrow": "^1.2.1",
+    "eslint-plugin-prettier": "^3.1.4",
     "jsdom": "16.2.2",
     "jsdom-global": "3.0.2",
     "prettier": "2.0.5",
