--- a/package.json
+++ b/package.json
@@ -28,30 +28,30 @@
   "license": "Apache-2.0",
   "devDependencies": {
     "@types/file-saver": "2.0.1",
-    "@typescript-eslint/eslint-plugin": "^3.4.0",
-    "@typescript-eslint/parser": "^3.4.0",
-    "@wessberg/rollup-plugin-ts": "1.2.26",
+    "@typescript-eslint/eslint-plugin": "3.7.0",
+    "@typescript-eslint/parser": "3.7.0",
+    "@wessberg/rollup-plugin-ts": "1.2.28",
     "barecolor": "1.0.1",
     "ceylon": "0.9.1",
-    "eslint": "^7.3.1",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-import": "^2.21.2",
-    "eslint-plugin-jsdoc": "^28.5.1",
-    "eslint-plugin-prefer-arrow": "^1.2.1",
-    "eslint-plugin-prettier": "^3.1.4",
-    "jsdom": "16.2.2",
+    "eslint": "7.5.0",
+    "eslint-config-prettier": "6.11.0",
+    "eslint-plugin-import": "2.22.0",
+    "eslint-plugin-jsdoc": "30.0.3",
+    "eslint-plugin-prefer-arrow": "1.2.2",
+    "eslint-plugin-prettier": "3.1.4",
+    "jsdom": "16.3.0",
     "jsdom-global": "3.0.2",
     "prettier": "2.0.5",
-    "rollup": "2.18.0",
+    "rollup": "2.22.2",
     "rollup-plugin-commonjs": "10.1.0",
-    "rollup-plugin-copy": "^3.3.0",
-    "rollup-plugin-eslint": "^7.0.0",
+    "rollup-plugin-copy": "3.3.0",
+    "rollup-plugin-eslint": "7.0.0",
     "rollup-plugin-html2": "1.1.0",
     "rollup-plugin-node-resolve": "5.2.0",
     "rollup-plugin-visualizer": "4.0.4",
     "ts-unused-exports": "6.2.1",
     "tslint": "6.1.2",
-    "typescript": "3.9.5"
+    "typescript": "3.9.7"
   },
   "dependencies": {
     "file-saver": "2.0.2",
