--- a/package.json
+++ b/package.json
@@ -30,29 +30,29 @@
   "license": "Apache-2.0",
   "devDependencies": {
     "@types/file-saver": "2.0.1",
-    "@typescript-eslint/eslint-plugin": "3.8.0",
-    "@typescript-eslint/parser": "3.8.0",
-    "@wessberg/rollup-plugin-ts": "1.3.1",
+    "@typescript-eslint/eslint-plugin": "3.9.0",
+    "@typescript-eslint/parser": "3.9.0",
+    "@wessberg/rollup-plugin-ts": "1.3.2",
     "barecolor": "1.0.1",
     "ceylon": "0.9.1",
-    "esbuild": "0.6.16",
+    "esbuild": "0.6.22",
     "eslint": "7.6.0",
     "eslint-config-prettier": "6.11.0",
     "eslint-plugin-import": "2.22.0",
-    "eslint-plugin-jsdoc": "30.2.1",
+    "eslint-plugin-jsdoc": "30.2.2",
     "eslint-plugin-prefer-arrow": "1.2.2",
     "eslint-plugin-prettier": "3.1.4",
-    "jsdom": "16.3.0",
+    "jsdom": "16.4.0",
     "jsdom-global": "3.0.2",
-    "lodash": ">=4.17.19",
+    "lodash": "4.17.20",
     "prettier": "2.0.5",
-    "rollup": "2.23.0",
+    "rollup": "2.25.0",
     "rollup-plugin-commonjs": "10.1.0",
     "rollup-plugin-copy": "3.3.0",
     "rollup-plugin-eslint": "7.0.0",
     "rollup-plugin-html2": "2.0.0",
     "rollup-plugin-node-resolve": "5.2.0",
-    "rollup-plugin-visualizer": "4.0.4",
+    "rollup-plugin-visualizer": "4.1.0",
     "ts-unused-exports": "6.2.1",
     "tslint": "6.1.3",
     "typescript": "3.9.7"
