Refactored my npm config to be less reliant on the bundler, for example by watching through chokidar Added alternative build path with esbuild which meant adding an explicit compile step with tsc to emit type errors Added ts-node as a dev dependency so it runs faster with npx Added loglevel=silent to .npmrc to suppress the weird npm prefix lines and to provent the npm ERR when some tool has a compile error or similar

--- a/package.json
+++ b/package.json
@@ -13,18 +13,20 @@
   "main": "main.js",
   "scripts": {
     "clean": "rm -rf dist && mkdir dist",
-    "build": "npx rollup -c rollup.config.js",
+    "compile": "npx tsc --noEmit",
+    "eslint": "npx eslint src",
     "test": "npx ts-node test/runtests.ts",
-    "bt": "npm run build && npm run test",
-    "cbt": "npm run clean && npm run build && npm run test",
-    "watch": "npx rollup -c rollup.config.js -w",
+    "bundle-rollup": "npx rollup -c rollup.config.js",
+    "bundle-esb": "npx esbuild --bundle --sourcemap --target=es2017 --outdir=dist --format=esm --minify --splitting src/ts/tree.ts src/example/main.ts && cp src/css/*.css dist/example && cp src/example/index2.html dist/example/index.html",
+    "bt-rollup": "npm run bundle-rollup && npm run test",
+    "cbt-rollup": "npm run clean && npm run bundle-rollup && npm run test",
+    "bt": "npm run compile && npm run bundle-esb && npm run test",
+    "cbt": "npm run clean && npm run bundle-esb && npm run test",
+    "watch": "npx chokidar 'src/**/*.*' -c 'npm run bt'",
     "sloc": "npx sloc src",
     "unused-exports": "npx ts-unused-exports tsconfig.json",
     "serve": "npx http-server dist",
-    "unused-dependencies": "npx depcheck",
-    "esb": "npx esbuild --bundle --sourcemap --target=es2017 --outdir=dist --format=esm src/ts/tree.ts src/example/main.ts && cp src/css/*.css dist/example && cp src/example/index2.html dist/example/index.html",
-    "esbserve": "npx http-server dist/example",
-    "eslint": "npx eslint src"
+    "unused-dependencies": "npx depcheck"
   },
   "author": "Boris Terzic <boris@terzic.be>",
   "license": "Apache-2.0",
@@ -35,6 +37,7 @@
     "@wessberg/rollup-plugin-ts": "1.3.5",
     "barecolor": "1.0.1",
     "ceylon": "0.9.1",
+    "chokidar-cli": "^2.1.0",
     "esbuild": "0.7.11",
     "eslint": "7.10.0",
     "eslint-config-prettier": "6.12.0",
@@ -53,6 +56,7 @@
     "rollup-plugin-html2": "2.0.0",
     "rollup-plugin-node-resolve": "5.2.0",
     "rollup-plugin-visualizer": "4.1.1",
+    "ts-node": "9.0.0",
     "ts-unused-exports": "6.2.4",
     "typescript": "4.0.3"
   },
