--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "url": "https://github.com/aggregat4/dendriform"
   },
   "engines": {
-    "node": ">=13.0.0",
-    "npm": ">=6.13.0"
+    "node": ">=14.17.1",
+    "npm": ">=7.18.1"
   },
   "main": "main.js",
   "scripts": {
@@ -16,9 +16,9 @@
     "compile": "npx tsc --noEmit",
     "eslint": "npx eslint src",
     "test": "npx ts-node test/runtests.ts",
-    "bundle-esb": "npx esbuild --bundle --sourcemap --target=es2017 --outdir=dist --format=esm --minify --splitting src/ts/tree.ts src/example/main.ts && cp src/css/*.css dist/example && cp src/example/index2.html dist/example/index.html",
-    "bt": "npm run compile && npm run bundle-esb && npm run test",
-    "cbt": "npm run clean && npm run bundle-esb && npm run test",
+    "bundle": "npx esbuild --bundle --sourcemap --target=es2017 --outdir=dist --format=esm --minify --splitting src/ts/tree.ts src/example/main.ts && cp src/css/*.css dist/example && cp src/example/index2.html dist/example/index.html",
+    "bt": "npm run compile && npm run bundle && npm run test",
+    "cbt": "npm run clean && npm run bundle && npm run test",
     "watch": "npx chokidar 'src/**/*.*' --initial -c 'npm run bt'",
     "sloc": "npx sloc src",
     "unused-exports": "npx ts-unused-exports tsconfig.json",
@@ -32,7 +32,7 @@
     "barecolor": "1.0.1",
     "ceylon": "0.9.1",
     "chokidar-cli": "2.1.0",
-    "esbuild": "0.12.8",
+    "esbuild": "0.12.9",
     "eslint": "7.28.0",
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-prettier": "3.4.0",
@@ -41,7 +41,7 @@
     "prettier": "2.3.1",
     "ts-node": "10.0.0",
     "ts-unused-exports": "7.0.3",
-    "typescript": "4.3.2"
+    "typescript": "4.3.4"
   },
   "dependencies": {
     "file-saver": "2.0.5",
