--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "compile": "npx tsc --noEmit",
     "eslint": "npx eslint src",
     "test": "npx ts-node test/runtests.ts",
+    "itest-bundle": "npx esbuild --bundle --sourcemap --target=es2017 --outdir=dist --format=esm integration-tests/integration-tests.ts",
+    "itest": "npm run itest-bundle && npx ts-node integration-tests/run-integration-tests.ts",
     "bundle": "npx esbuild --bundle --sourcemap --target=es2017 --outdir=dist --format=esm --minify --splitting src/ts/tree.ts src/example/main.ts && cp src/css/*.css dist/example && cp src/example/index2.html dist/example/index.html",
     "bt": "npm run compile && npm run bundle && npm run test",
     "cbt": "npm run clean && npm run bundle && npm run test",
@@ -39,6 +41,7 @@
     "jsdom": "16.6.0",
     "jsdom-global": "3.0.2",
     "prettier": "2.3.1",
+    "puppeteer": "^10.1.0",
     "ts-node": "10.0.0",
     "ts-unused-exports": "7.0.3",
     "typescript": "4.3.4"
