--- a/package.json
+++ b/package.json
@@ -15,12 +15,13 @@
     "clean": "rm -rf dist && mkdir dist",
     "compile": "npx tsc --noEmit",
     "eslint": "npx eslint src",
-    "test": "npx ts-node test/runtests.ts",
-    "itest-bundle": "npx esbuild --bundle --sourcemap --target=es2017 --outdir=dist --format=esm integration-tests/integration-tests.ts",
-    "itest": "npm run itest-bundle && npx ts-node integration-tests/run-integration-tests.ts",
     "bundle": "npx esbuild --bundle --sourcemap --target=es2017 --outdir=dist --format=esm --minify --splitting src/ts/tree.ts src/example/main.ts && cp src/css/*.css dist/example && cp src/example/index2.html dist/example/index.html",
+    "bundle-integration-tests": "npx esbuild --bundle --sourcemap --target=es2017 --outdir=dist --format=esm test/integration/integration-tests.ts",
+    "run-tests": "npx ts-node test/runtests.ts",
+    "run-integration-tests": "npm run bundle-integration-tests && TIZZY_ITEST_RELATIVE_FILENAME=test/integration/integration-tests.html npx ts-node lib/run-integration-tests.ts",
+    "test": "npm run run-tests && npm run run-integration-tests",
     "bt": "npm run compile && npm run bundle && npm run test",
-    "cbt": "npm run clean && npm run bundle && npm run test",
+    "cbt": "npm run clean && npm run bt",
     "watch": "npx chokidar 'src/**/*.*' --initial -c 'npm run bt'",
     "sloc": "npx sloc src",
     "unused-exports": "npx ts-unused-exports tsconfig.json",
