--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "clean": "rm -rf dist && mkdir dist",
     "compile": "npx tsc --noEmit",
     "eslint": "npx eslint src",
-    "bundle": "npx esbuild --bundle --sourcemap --target=es2017 --outdir=dist --format=esm --minify --splitting src/ts/tree.ts src/example/main.ts && cp src/css/*.css dist/example && cp src/example/index2.html dist/example/index.html",
-    "bundle-integration-tests": "npx esbuild --bundle --sourcemap --target=es2017 --outdir=dist --format=esm test/integration/integration-tests.ts",
+    "bundle": "npx esbuild --bundle --sourcemap --target=es2018 --outdir=dist --format=esm --minify --splitting src/ts/tree.ts src/example/main.ts && cp src/css/*.css dist/example && cp src/example/index2.html dist/example/index.html",
+    "bundle-integration-tests": "npx esbuild --bundle --sourcemap --target=es2018 --outdir=dist --format=esm test/integration/integration-tests.ts",
     "unit-tests": "npx ts-node test/runtests.ts",
     "run-integration-tests": "npm run bundle-integration-tests && TIZZY_ITEST_RELATIVE_FILENAME=test/integration/integration-tests.html npx ts-node lib/run-integration-tests.ts",
     "test": "npm run unit-tests && npm run run-integration-tests",
@@ -24,7 +24,7 @@
     "cbt": "npm run clean && npm run bt",
     "watch": "npx chokidar 'src/**/*.*' --initial -c 'npm run bt'",
     "sloc": "npx sloc src",
-    "unused-exports": "npx ts-unused-exports tsconfig.json",
+    "unused-exports": "npx ts-prune",
     "serve": "npx http-server dist",
     "unused-dependencies": "npx depcheck",
     "dependency-upgrades": "npx npm-upgrade"
@@ -35,16 +35,16 @@
     "@types/file-saver": "2.0.3",
     "barecolor": "1.0.1",
     "ceylon": "0.9.1",
-    "chokidar-cli": "2.1.0",
-    "esbuild": "0.12.15",
-    "eslint": "7.30.0",
+    "chokidar-cli": "3.0.0",
+    "esbuild": "0.12.18",
+    "eslint": "7.32.0",
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-prettier": "3.4.0",
-    "jsdom": "16.6.0",
+    "jsdom": "16.7.0",
     "jsdom-global": "3.0.2",
     "prettier": "2.3.2",
-    "puppeteer": "^10.1.0",
-    "ts-node": "10.0.0",
+    "puppeteer": "^10.2.0",
+    "ts-node": "10.1.0",
     "ts-unused-exports": "7.0.3",
     "typescript": "4.3.5"
   },
