--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "bt": "npm run compile && npm run bundle && npm run test",
     "cbt": "npm run clean && npm run bt",
     "watch": "npx chokidar 'src/**/*.*' --initial -c 'npm run bt'",
+    "serve": "npx http-server dist",
     "sloc": "npx sloc src",
     "unused-exports": "npx ts-prune",
-    "serve": "npx http-server dist",
     "unused-dependencies": "npx depcheck",
-    "dependency-upgrades": "npx npm-upgrade"
+    "dependency-upgrades": "npx npm-upgrade",
+    "dependency-graph": "npx depcruise --include-only \"^src\" --do-not-follow \"(tree.ts|main.ts)\" --output-type dot src | dot -T svg > dependencygraph.svg",
+    "dependency-check": "npx depcruise --config .dependency-cruiser.js src/"
   },
   "author": "Boris Terzic <boris@terzic.be>",
   "license": "Apache-2.0",
@@ -36,6 +38,7 @@
     "barecolor": "1.0.1",
     "ceylon": "0.9.1",
     "chokidar-cli": "3.0.0",
+    "dependency-cruiser": "10.0.7",
     "esbuild": "0.12.18",
     "eslint": "7.32.0",
     "eslint-config-prettier": "8.3.0",
@@ -43,7 +46,7 @@
     "jsdom": "16.7.0",
     "jsdom-global": "3.0.2",
     "prettier": "2.3.2",
-    "puppeteer": "^10.2.0",
+    "puppeteer": "10.2.0",
     "ts-node": "10.1.0",
     "ts-unused-exports": "7.0.3",
     "typescript": "4.3.5"
