--- a/package.json
+++ b/package.json
@@ -22,9 +22,10 @@
     "test": "npm run unit-tests && npm run run-integration-tests",
     "bt": "npm run compile && npm run bundle && npm run test",
     "cbt": "npm run clean && npm run bt",
-    "watch": "npx chokidar 'src/**/*.*' --initial -c 'npm run bt'",
+    "watch": "npx chokidar-cli 'src/**/*.*' --initial -c 'npm run bt'",
     "serve": "npx http-server dist",
     "sloc": "npx sloc src",
+    "audit": "npm audit --omit dev",
     "unused-exports": "npx ts-prune",
     "unused-dependencies": "npx depcheck",
     "dependency-upgrades": "npx npm-upgrade",
@@ -37,7 +38,6 @@
     "@types/file-saver": "2.0.3",
     "barecolor": "1.0.1",
     "ceylon": "0.9.1",
-    "chokidar-cli": "3.0.0",
     "esbuild": "0.13.9",
     "eslint": "8.1.0",
     "eslint-config-prettier": "8.3.0",
