--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "eslint-plugin-prettier": "4.0.0",
     "jsdom": "18.0.0",
     "jsdom-global": "3.0.2",
+    "oletus": "3.2.0",
     "prettier": "2.4.1",
     "puppeteer": "10.4.0",
     "ts-node": "10.4.0",
