--- a/package.json
+++ b/package.json
@@ -43,8 +43,9 @@
     "@types/file-saver": "2.0.5",
     "barecolor": "1.0.1",
     "ceylon": "0.9.1",
+    "dependency-cruiser": "11.2.1",
     "esbuild": "0.14.11",
-    "eslint": "8.6.0",
+    "eslint": "8.7.0",
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-prettier": "4.0.0",
     "jsdom": "19.0.0",
