--- a/package.json
+++ b/package.json
@@ -34,9 +34,9 @@
     "unused-exports": "npx ts-prune",
     "unused-dependencies": "npx depcheck",
     "dependency-upgrades": "npx npm-upgrade",
-    "dependency-graph": "npx depcruise --include-only \"^src\" --do-not-follow \"(tree.ts|main.ts)\" --output-type dot src | dot -T svg > dependencygraph.svg",
+    "dependency-graph": "npx depcruise --do-not-follow \"(tree.ts|main.ts)\" --output-type dot src | dot -T svg > dependencygraph.svg",
     "dependency-check": "npx depcruise --config .dependency-cruiser.js src/",
-    "arkit-graph": "npx arkit"
+    "arkit-graph": "npx arkit -e src/example/main.ts,src/ts/tree.ts"
   },
   "author": "Boris Terzic <boris@terzic.be>",
   "license": "Apache-2.0",
