--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "jsdom": "19.0.0",
     "jsdom-global": "3.0.2",
     "prettier": "2.5.1",
+    "prettier-plugin-jsdoc": "0.3.30",
     "puppeteer": "13.3.2",
     "ts-node": "10.5.0",
     "typescript": "4.5.5"
