--- a/package.json
+++ b/package.json
@@ -22,8 +22,9 @@
     "bundle": "npx esbuild --bundle --sourcemap --target=es2018 --outdir=dist --format=esm --minify --splitting src/ts/tree.ts src/example/main.ts && cp src/css/*.css dist/example && cp src/example/index2.html dist/example/index.html",
     "bundle-integration-tests": "npx esbuild --bundle --sourcemap --target=es2018 --outdir=dist --format=esm test/integration/integration-tests.ts",
     "unit-tests": "npx ts-node test/runtests.ts",
-    "run-integration-tests": "npm run bundle-integration-tests && TIZZY_ITEST_RELATIVE_FILENAME=test/integration/integration-tests.html npx ts-node lib/run-integration-tests.ts",
-    "test": "npm run unit-tests && npm run run-integration-tests",
+    "integration-tests": "npm run bundle-integration-tests && TIZZY_ITEST_RELATIVE_FILENAME=test/integration/integration-tests.html npx ts-node lib/run-integration-tests.ts",
+    "e2e-tests": "npx ts-node lib/run-e2e-tests.ts", 
+    "test": "npm run unit-tests && npm run integration-tests",
     "bt": "npm run compile && npm run bundle && npm run test",
     "cbt": "npm run clean && npm run bt",
     "audit": "npm audit --omit dev",
