Started mini dendriform test server with koa

--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "bundle-integration-tests": "npx esbuild --bundle --sourcemap --target=es2018 --outdir=dist --format=esm test/integration/integration-tests.ts",
     "unit-tests": "npx ts-node test/runtests.ts",
     "integration-tests": "npm run bundle-integration-tests && TIZZY_ITEST_RELATIVE_FILENAME=test/integration/integration-tests.html npx ts-node lib/run-integration-tests.ts",
-    "e2e-tests": "npx ts-node lib/run-e2e-tests.ts", 
+    "e2e-tests": "npx ts-node lib/run-e2e-tests.ts",
     "test": "npm run unit-tests && npm run integration-tests",
     "bt": "npm run compile && npm run bundle && npm run test",
     "cbt": "npm run clean && npm run bt",
@@ -53,6 +53,9 @@
     "eslint-plugin-prettier": "4.0.0",
     "jsdom": "19.0.0",
     "jsdom-global": "3.0.2",
+    "koa": "2.13.4",
+    "koa-mount": "^4.0.0",
+    "koa-static": "5.0.0",
     "prettier": "2.6.0",
     "prettier-plugin-jsdoc": "0.3.31",
     "puppeteer": "13.5.1",
