--- a/package.json
+++ b/package.json
@@ -42,7 +42,9 @@
   "author": "Boris Terzic <boris@terzic.be>",
   "license": "Apache-2.0",
   "devDependencies": {
+    "@koa/router": "10.1.1",
     "@types/file-saver": "2.0.5",
+    "@types/koa__router": "8.0.11",
     "@typescript-eslint/eslint-plugin": "5.16.0",
     "barecolor": "1.0.1",
     "ceylon": "0.9.1",
@@ -54,7 +56,8 @@
     "jsdom": "19.0.0",
     "jsdom-global": "3.0.2",
     "koa": "2.13.4",
-    "koa-mount": "^4.0.0",
+    "koa-logger": "3.2.1",
+    "koa-mount": "4.0.0",
     "koa-static": "5.0.0",
     "prettier": "2.6.0",
     "prettier-plugin-jsdoc": "0.3.31",
