--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "bundle-integration-tests": "npx esbuild --bundle --sourcemap --target=es2018 --outdir=dist --format=esm test/integration/integration-tests.ts",
     "unit-tests": "npx ts-node test/runtests.ts",
     "integration-tests": "npm run bundle-integration-tests && TIZZY_ITEST_RELATIVE_FILENAME=test/integration/integration-tests.html npx ts-node lib/run-integration-tests.ts",
-    "e2e-tests": "npx ts-node lib/run-e2e-tests.ts",
-    "test": "npm run unit-tests && npm run integration-tests",
+    "e2e-tests": "npx ts-node test/e2e/run-e2e-tests.ts",
+    "test": "npm run unit-tests && npm run integration-tests && npm run e2e-tests",
     "bt": "npm run compile && npm run bundle && npm run test",
     "cbt": "npm run clean && npm run bt",
     "audit": "npm audit --omit dev",
