--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "koa-static": "5.0.0",
     "prettier": "2.6.0",
     "prettier-plugin-jsdoc": "0.3.31",
+    "prettier-plugin-organize-imports": "2.3.4",
     "puppeteer": "13.5.1",
     "ts-node": "10.7.0",
     "typescript": "4.6.2"
