--- a/package.json
+++ b/package.json
@@ -45,31 +45,31 @@
     "@koa/router": "10.1.1",
     "@types/file-saver": "2.0.5",
     "@types/koa__router": "8.0.11",
-    "@typescript-eslint/eslint-plugin": "5.20.0",
+    "@typescript-eslint/eslint-plugin": "5.21.0",
     "barecolor": "1.0.1",
     "ceylon": "0.9.1",
     "dependency-cruiser": "11.6.0",
     "esbuild": "0.14.38",
-    "eslint": "8.13.0",
+    "eslint": "8.14.0",
     "eslint-config-prettier": "8.5.0",
     "eslint-plugin-prettier": "4.0.0",
     "jsdom": "19.0.0",
     "jsdom-global": "3.0.2",
     "koa": "2.13.4",
-    "koa-body": "^4.2.0",
+    "koa-body": "5.0.0",
     "koa-logger": "3.2.1",
     "koa-mount": "4.0.0",
     "koa-static": "5.0.0",
     "prettier": "2.6.2",
     "prettier-plugin-jsdoc": "0.3.38",
     "prettier-plugin-organize-imports": "2.3.4",
-    "puppeteer": "13.6.0",
+    "puppeteer": "13.7.0",
     "ts-node": "10.7.0",
-    "typescript": "4.6.3"
+    "typescript": "4.6.4"
   },
   "dependencies": {
     "file-saver": "2.0.5",
     "idb": "7.0.1",
-    "lit-html": "2.2.2"
+    "lit-html": "2.2.3"
   }
 }
